--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="links" href="https://github.com/clemg/pythongolfer/" target="_BLANK">Github</a><br />
     <a class="links" href="https://github.com/clemg/pythongolfer/blob/main/README.md#qa" target="_BLANK">Q&A</a>
 
-    <label for="code">Enter your ungolfed Python code</label>
+    <label for="code">Enter your ungolfed JavaScript code</label>
     <textarea id="code" name="code" oninput="calculateCharsCode()" spellcheck="false" rows="10" cols="66" placeholder="Code goes here..."></textarea>
     <p id="codeCharsP" style="visibility: hidden;"><span id="codeChars"></span> chars</p>
 
