--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Python Golfer</title>
+    <title>Javascript Golfer</title>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" />
     <script type="text/javascript" src="script.js"></script>
